--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,26 +2,36 @@ version: "3.6"
 
 services:
   sql:
-    image: mysql:latest
+    image: mysql:5.7
     container_name: sql
-    restart: always
+    restart: unless-stopped
     environment:
+      - MYSQL_HOST_IP=localhost
       - MYSQL_USER=user
       - MYSQL_PASSWORD=password
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=imse_sql_db
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-    expose:
-      - 8001
     ports:
-      - 8001
+      - 3306
+    expose:
+      - 3306
 
   api:
     #this tells docker where to look for the Dockerfile to build the image
     build: ./Dataservice
+    depends_on:
+      - sql
     #name of your container and also the DNS name (nginx will proxy pass to this container from localhost:8000 when using a browser or Postman)
     container_name: rest-service
     restart: always
+    environment:
+      - MYSQL_HOST_IP=localhost
+      - MYSQL_HOST=sql
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=password
+      - MYSQL_DB=imse_sql_db
+    links:
+      - sql
     #EXPOSE defines the ports reachable from INSIDE your docker network
     expose:
       - 8000
