sql_setup (+) add sql_setup script (+) add volume to sql service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
       - MYSQL_PASSWORD=password
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=imse_sql_db
+    volumes:
+      - /var/lib/mysql
     ports:
       - 3306
     expose:
