sql_setup (m) move setup.sql to scripts dir (c) mount scripts dir for db to docker-entrypoint-initdb.d

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,8 @@ services:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=imse_sql_db
     volumes:
-      - /var/lib/mysql
+      - ./db/scripts:/docker-entrypoint-initdb.d
+      - ./db/volume:/var/lib/mysql
     ports:
       - 3306
     expose:
