--- a/Dataservice/package.json
+++ b/Dataservice/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node dist/app.js",
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/app.js\"",
     "test": "service-test"
   },
   "author": "Christian Lascsak",
@@ -18,6 +19,8 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/mysql": "^2.15.16",
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.6",
     "typescript": "^4.0.5"
   }
 }
