--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,8 +40,9 @@ services:
       - 8000
     ports:
       - 8000:3000
-    volumes: 
+    volumes:
       - ./Dataservice:/app
+      - /app/node_modules
 
   frontend:
     build: ./imse-frontend
@@ -52,3 +53,5 @@ services:
       - 8080
     ports:
       - 8080:8080
+    volumes:
+      - ./imse-frontend:/frontend
