--- a/imse-frontend/Dockerfile
+++ b/imse-frontend/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /app
 COPY package*.json ./
 
 RUN npm install
+RUN npm install @vue/cli -g
 COPY . .
-RUN npm run build
 
 EXPOSE 8080
 CMD ["npm", "run", "serve"]
