port exposure through nginx

--- a/imse-frontend/Dockerfile
+++ b/imse-frontend/Dockerfile
@@ -8,11 +8,11 @@ RUN npm install @vue/cli -g
 COPY . .
 RUN npm run build
 
-#EXPOSE 8080
-#CMD ["npm", "run", "serve"]
+EXPOSE 8080
+CMD ["npm", "run", "serve"]
 
 FROM nginx:1.16.1-alpine as production-stage
 COPY --from=build-stage /frontend/dist /usr/share/nginx/html
 
 EXPOSE 80
-CMD [ "nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"]
