--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,8 +16,8 @@ services:
       - ./db/scripts:/docker-entrypoint-initdb.d/:ro
     expose:
       - 3306
-    #networks: 
-    #  db:
+    networks: 
+      db:
 
   api:
     #this tells docker where to look for the Dockerfile to build the image
@@ -42,9 +42,9 @@ services:
     volumes:
       - ./Dataservice:/app
       - /app/node_modules
-    #networks:
-    #  api:
-    #  db:
+    networks:
+      api:
+      db:
 
   web-api:
     # this is an interface between the frontend and the api, so the api is not exposed
@@ -61,9 +61,9 @@ services:
     volumes:
       - ./website-interface:/web-api
       - /web-api/node_modules
-    #networks: 
-    #  api:
-    #  frontend:
+    networks: 
+      api:
+      frontend:
 
   frontend:
     build: ./imse-frontend
@@ -75,8 +75,8 @@ services:
     volumes:
       - ./imse-frontend:/frontend
       - /frontend/node_modules
-    #networks: 
-    #  frontend:
+    networks: 
+      frontend:
 
   nginx:
     build: ./nginx
@@ -85,8 +85,10 @@ services:
     ports: 
       - 8081:8081
       - 8001:8001
+    networks:
+      frontend:
 
-#networks: 
-#  frontend:
-#  db:  
-#  api:
+networks: 
+  frontend:
+  db:  
+  api:
