--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,16 @@ server {
 }
 
 server {
-    listen 8001;
+    listen 80;
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
     location / {
         proxy_pass http://imse-frontend:80;
     }
