--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,15 @@
 server {
     listen 8081;
     location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 8881 ssl;
+    ssl_certificate /etc/ssl/certs/nginx-selfsigned_api.crt;
+    ssl_certificate_key /etc/ssl/private/nginx-selfsigned_api.key;
+    location / {
         proxy_pass http://web-api:8081;
     }
 }
