--- a/Dataservice/package.json
+++ b/Dataservice/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "mysql": "2.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/mongodb": "^3.6.3",
     "@types/mysql": "^2.15.16",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.6",
