--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,7 +53,8 @@ services:
       - MYSQL_USER=user
       - MYSQL_PASSWORD=password
       - MYSQL_DB=imse_sql_db
-      - MONGO_HOST_IP=localhost
+      - MONGO_HOST_IP=mongo
+      - MONGO_PORT=27017
       - MONGO_USER=user
       - MONGO_PASSWORD=password
       - MONGO_DB=imse_mongo_db
