--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       db:
 
   mongo:
-    image: mongo
+    image: mongo:4.4
     container_name: mongo
     environment:
       MONGO_INITDB_ROOT_USERNAME: user
